--- a/pages/scout-ja/integrations/ci/gha.mdx
+++ b/pages/scout-ja/integrations/ci/gha.mdx
@@ -14,7 +14,7 @@ import { Callout } from 'nextra/components'
 ## 前提条件
 
 - この例では、Docker Hubまたは他のレジストリにDocker Scoutを有効にした既存のイメージリポジトリがあることを前提としています。
-- この例では、[Environment](https://chatgpt.com/environment/_index.md) を使用して、プルリクエストでビルドされたイメージを `production` という環境での同じイメージの異なるバージョンと比較します。
+- この例では、[実行環境](/scout-ja/integrations/environment) を使用して、プルリクエストでビルドされたイメージを `production` という環境での同じイメージの異なるバージョンと比較します。
 
 ## 手順
 
