--- a/pages/scout-ja/integrations/environment/cli.mdx
+++ b/pages/scout-ja/integrations/environment/cli.mdx
@@ -10,7 +10,7 @@ import { Tabs } from 'nextra/components'
 
 Docker Scout CLI クライアントを CI ワークフローで実行することで、環境統合を作成できます。CLI クライアントは GitHub のバイナリと Docker Hub のコンテナイメージとして利用可能です。クライアントを使用して `docker scout environment` コマンドを呼び出し、イメージを環境に割り当てます。
 
-`docker scout environment` コマンドの使用方法の詳細については、[CLI リファレンス](https://chatgpt.com/reference/cli/docker/scout/environment.md)を参照してください。
+`docker scout environment` コマンドの使用方法の詳細については、[CLI リファレンス](https://docs.docker.com/reference/cli/docker/scout/environment/)を参照してください。
 
 ## 例
 
