--- a/pages/scout-ja/integrations/source-code-management/github.mdx
+++ b/pages/scout-ja/integrations/source-code-management/github.mdx
@@ -17,7 +17,7 @@ GitHub 統合を有効にすると、Docker Scout はイメージ分析結果と
 
 Dockerfile を解析すると、イメージ作成に使用されたベースイメージのタグが明らかになります。このタグ情報により、Docker Scout はタグが最新であるかどうかを検出できます。たとえば、`alpine:3.18` をベースイメージとして使用していて、その後 `3.18` バージョンのパッチがリリースされ、セキュリティ修正が含まれていた場合、`alpine:3.18` タグが古くなる可能性があります。現在使用している `alpine:3.18` はもはや最新のものではありません。
 
-このような状況が発生すると、Docker Scout はその差異を検出し、[最新のベースイメージポリシー](/scout-ja/policy#up-to-date-base-images)を通じて通知します。GitHub 統合が有効化されていると、ベースイメージの更新に関する自動的な提案も受けられます。Docker Scout がどのようにしてサプライチェーンのセキュリティ対策を自動的に改善できるかについては、[修正](https://chatgpt.com/policy/remediation.md)を参照してください。
+このような状況が発生すると、Docker Scout はその差異を検出し、[最新のベースイメージポリシー](/scout-ja/policy#up-to-date-base-images)を通じて通知します。GitHub 統合が有効化されていると、ベースイメージの更新に関する自動的な提案も受けられます。Docker Scout がどのようにしてサプライチェーンのセキュリティ対策を自動的に改善できるかについては、[修正](/scout-ja/policy/remediation)を参照してください。
 
 ## セットアップ
 
