--- a/pages/scout-ja/explore/dashboard.mdx
+++ b/pages/scout-ja/explore/dashboard.mdx
@@ -1,12 +1,126 @@
 ---
 title: ダッシュボード
+keywords: scout, スキャン, 分析, 脆弱性, Hub, サプライチェーン, セキュリティ, レポート, ダッシュボード
 description: Docker Scout Dashboardは、イメージの分析をレビューし、共有するのに役立ちます。 
 ---
 
+import { Callout } from 'nextra/components'
+
 # ダッシュボード
 
-Docker Scout Dashboardは、Organization 内でイメージの分析結果をチームと共有するのに役立ちます。開発者は、Docker HubやArtifactoryからのすべてのイメージのセキュリティステータスを一目で確認し、迅速に修正方法を取得できます。これにより、セキュリティ、コンプライアンス、運用などの役割を担うチームメンバーが、対処すべき脆弱性や問題を把握できるようになります。
+[Docker Scout Dashboard](https://scout.docker.com/)は、Organization 内でイメージの分析結果をチームと共有するのに役立ちます。開発者は、Docker HubやArtifactoryからのすべてのイメージのセキュリティステータスを一目で確認し、迅速に修正方法を取得できます。これにより、セキュリティ、コンプライアンス、運用などの役割を担うチームメンバーが、対処すべき脆弱性や問題を把握できるようになります。
 
 ## 概要
 
-{/* ![Docker Scout Dashboard](./scout-ja/dashboard-overview.webp) */}
+![Docker Scout ダッシュボードの概要のスクリーンショット](/scout-ja/dashboard-overview.webp)
+
+**Overview**タブでは、選択した Organization のリポジトリの要約を表示します。
+
+ページ上部で表示する **Environment** を選択できます。デフォルトでは、最新のプッシュイメージが表示されます。実行環境について詳しくは、[実行環境モニタリング](/scout-ja/integrations/environment)を参照してください。
+
+**Policy** ボックスには、各ポリシーの現在の準拠評価と、選択した実行環境のトレンドが表示されます。トレンドは、最新のイメージと前のバージョンのポリシー差分を示します。ポリシーの詳細については、[ポリシー評価](/scout-ja/policy)を参照してください。
+
+脆弱性チャートは、選択した環境内のイメージに対する脆弱性の総数を時間経過に沿って示します。ドロップダウンメニューでチャートの時間スケールを設定できます。
+
+ウェブサイト上部のヘッダーメニューを使用して、Docker Scout ダッシュボードのさまざまな主要セクションにアクセスできます：
+
+- **Policies**: Organization のポリシー準拠を表示します。詳細は[ポリシー](#ポリシー)を参照
+- **Images**: Organization 内の Docker Scout 有効リポジトリを一覧表示します。詳細は[イメージ](#イメージ)を参照
+- **Base images**: Organization 内のリポジトリで使用されているすべてのベースイメージを表示
+- **Packages**: Organization 内のリポジトリ全体のパッケージ一覧
+- **Vulnerabilities**: Organization のイメージに含まれるすべての CVE を表示。詳細は[脆弱性](#脆弱性)を参照
+- **Integrations**: サードパーティ統合の作成と管理。詳細は[統合](#統合)を参照
+- **Settings**: リポジトリ設定や請求の管理。詳細は[設定](#設定)を参照
+
+## ポリシー
+
+**Policies** ビューでは、選択した Organization と実行環境内のすべてのイメージに対するポリシー準拠の内訳が表示されます。イメージドロップダウンメニューを使用して、特定の実行環境に対するポリシー内訳を表示できます。
+
+ポリシーの詳細については、[ポリシー評価](/scout-ja/policy)を参照してください。
+
+## イメージ
+
+**Images** ビューでは、選択した環境内の Docker Scout 有効リポジトリ内のすべてのイメージが表示されます。異なる環境を選択したり、テキストフィルターでリポジトリ名で絞り込むことができます。
+
+![イメージビューのスクリーンショット](/scout-ja/dashboard-images.webp)
+
+リストには、各リポジトリについて以下の詳細が表示されます：
+
+- リポジトリ名（タグやダイジェストを除くイメージリファレンス）
+- 選択した実行環境内の最新イメージのタグ
+- 最新タグのオペレーティングシステムとアーキテクチャ
+- 最新タグの脆弱性ステータス
+- 最新タグのポリシーステータス
+
+リポジトリリンクを選択すると、そのリポジトリ内のすべてのイメージリストが表示され、特定のイメージの詳細な分析結果を確認したり、タグを比較してパッケージや脆弱性の違いを確認できます。
+
+イメージリンクを選択すると、そのタグまたはダイジェストの詳細ビューが表示され、次の2つのタブで構成とポリシー準拠の詳細を確認できます:
+
+- **Policy status** は、選択したイメージのポリシー評価結果を表示します。また、ポリシー違反に関する詳細リンクもあります。
+
+  ポリシーについての詳細は、[ポリシー評価](/scout-ja/policy)を参照してください。
+
+- **Image layers** は、イメージ分析結果の内訳を表示します。イメージに含まれる脆弱性の全体像を把握し、それらがどのように侵入したかを理解できます。
+
+## 脆弱性
+
+**Vulnerabilities** ビューでは、Organization 内のイメージに対するすべての脆弱性の一覧が表示されます。この一覧には、CVE の重大度や共通脆弱性スコアリングシステム（CVSS）スコア、および修正バージョンの有無が含まれます。表示される CVSS スコアは、すべての[情報源](/scout-ja/deep-dive/advisory-db-sources)の中で最も高いスコアです。
+
+このページのリンクを選択すると、CVE の詳細ページが開きます。このページは公開されており、CVE に関する詳細な情報が表示されます。Docker Scout の Organization メンバーでなくても、この特定の CVE 説明へのリンクを他の人と共有できます。
+
+サインインしている場合、このページの **My images** タブに、CVE の影響を受けるすべてのイメージが一覧表示されます。
+
+## 統合
+
+**Integrations** ページでは、Docker Scout 統合（実行環境統合やレジストリ統合など）を作成および管理できます。統合の開始方法については、[Docker Scout の他システムとの統合](/scout-ja/integrations)を参照してください。
+
+## 設定
+
+Docker Scout ダッシュボードの設定メニューには次の内容が含まれます：
+
+- [**Billing**](#請求設定): Docker Scout のサブスクリプションと支払いの管理
+- [**Repository settings**](#リポジトリ設定): リポジトリの有効化と無効化
+- [**Notifications**](#通知設定): Docker Scout の通知設定の管理
+
+### 請求設定
+
+[請求設定](https://scout.docker.com/settings/billing)ページでは、現在の Organization に対する Docker Scout プランが表示されます。プランに含まれる内容や他の利用可能なプランとの比較、Organization のオーナーであればプランの変更も行えます。
+
+サブスクリプションプランの詳細については、[Docker Scout のサブスクリプションと機能](https://docs.docker.com/subscription/scout-details/)を参照してください。
+
+### リポジトリ設定
+
+Docker Scout をリポジトリで有効化すると、そのリポジトリにプッシュされる新しいタグが自動で分析されます。Amazon ECR、Azure ACR、または他のサードパーティレジストリでリポジトリを有効にするには、まず統合を行う必要があります。[コンテナレジストリの統合](/scout-ja/integrations#コンテナレジストリ)を参照してください。
+
+### 通知設定
+
+[通知設定](https://scout.docker.com/settings/notifications)ページでは、Docker Scout からの通知受信設定を変更できます。通知設定は個人用で、設定変更は個人のアカウントにのみ影響し、Organization 全体には影響しません。
+
+Docker Scout の通知の目的は、影響を受ける上流の変更に関する情報を提供することです。新しい脆弱性がセキュリティアドバイザリで開示され、その脆弱性がイメージに影響を与える場合に通知されます。新しいイメージをプッシュすることで脆弱性の影響やポリシー準拠が変化した場合には通知は行われません。
+
+<Callout type='info'>
+  通知は各リポジトリの最後にプッシュされたイメージタグに対してのみトリガーされます。「最後にプッシュされた」とは、レジストリに最も最近プッシュされ、Docker Scout によって分析されたイメージタグを指します。最後にプッシュされたイメージが新たに開示された CVE の影響を受けていない場合、通知はトリガーされません。
+</Callout>
+
+利用可能な通知設定は次の通りです：
+
+- **Repository scope**
+  
+  すべてのリポジトリ、または特定のリポジトリのみについて通知を受け取るかを選択できます。これらの設定は現在選択されている Organization に適用され、所属する各 Organization ごとに変更可能です。
+
+    - **All repositories**: アクセス権のあるすべてのリポジトリについて通知を受け取ります。
+
+    - **Specific repositories**: 特定のリポジトリについてのみ通知を受け取ります。通知を受け取りたいリポジトリ名を入力します。
+
+- **Delivery preferences**
+
+  Docker Scout からの通知の受信方法を設定します。これらの設定は、所属するすべての Organization に適用されます。
+
+  - **Notification pop-ups**: Docker Scout ダッシュボードに通知ポップアップメッセージを受信するには、このチェックボックスをオンにします。
+  - **OS notifications**: Docker Scout ダッシュボードをブラウザタブで開いている場合、ブラウザから OS レベルの通知を受信するには、このチェックボックスをオンにします。
+
+OS 通知を有効にするには、Docker Scout がブラウザ API を使用して通知を送信する権限が必要です。
+
+このページから、[Slack統合](/scout-ja/integrations/team-collaboration/slack)などのチームコラボレーション統合の設定にもアクセスできます。
+
+また、Docker Desktop の **Settings** > **Notifications** から通知設定を変更することもできます。
