--- a/pages/scout-ja/install.mdx
+++ b/pages/scout-ja/install.mdx
@@ -110,4 +110,4 @@ $ docker run -it \
 
 Docker Scout CLIプラグインは、[GitHub Action](https://github.com/docker/scout-action) としても利用可能です。GitHubワークフローで使用して、各プッシュごとにイメージを自動的に分析し、ポリシー遵守を評価することができます。
 
-Docker Scoutは、Jenkins、GitLab、Azure DevOpsなどの多くのCI/CDツールとも統合可能です。Docker Scoutの利用可能な[統合](./integrations/_index.md)について詳しくはご覧ください。
+Docker Scoutは、Jenkins、GitLab、Azure DevOpsなどの多くのCI/CDツールとも統合可能です。Docker Scoutの利用可能な[統合](/scout-ja/integrations)について詳しくはご覧ください。
