--- a/pages/build-cloud-ja/ci.mdx
+++ b/pages/build-cloud-ja/ci.mdx
@@ -27,7 +27,7 @@ CIでDocker Build Cloudを使用する場合、イメージをロードしてか
 <Tabs items={['GitHub Actions', 'GitLab', 'Circle CI', 'Buildkite', 'Jenkins', 'Travis CI', 'Bitbucket Pipelines', 'Shell', 'Docker Compose']}>
   <Tabs.Tab>
     <Callout type="info">
-      `docker/build-push-action`および`docker/bake-action`のバージョン4.0.0以降では、[デフォルトでProvenance Attestationsを使用](https://docs.docker.com/manuals/build/ci/github-actions/attestations.md#default-provenance)してイメージをビルドします。Docker Build Cloudは、イメージをレジストリにプッシュしない場合、自動的にローカルのイメージストアにロードしようとします。
+      `docker/build-push-action`および`docker/bake-action`のバージョン4.0.0以降では、[デフォルトでProvenance Attestationsを使用](https://docs.docker.com/build/ci/github-actions/attestations/#default-provenance)してイメージをビルドします。Docker Build Cloudは、イメージをレジストリにプッシュしない場合、自動的にローカルのイメージストアにロードしようとします。
 
       これにより、タグ付きイメージをビルドしてレジストリにプッシュしない場合、Docker Build CloudがAttestationsを含むイメージをロードしようとしても、GitHubランナーのローカルイメージストアがAttestationsをサポートしていないため、イメージのロードに失敗します。
 
