--- a/pages/build-cloud-ja/usage.mdx
+++ b/pages/build-cloud-ja/usage.mdx
@@ -109,7 +109,7 @@ Docker Desktop の [ビルドビュー](https://docs.docker.com/desktop/use-desk
 Docker Build Cloud でビルドシークレット（認証情報やトークンなど）を使用するには、`--secret` および `--ssh` CLI フラグを `docker buildx` コマンドで使用します。トラフィックは暗号化され、シークレットはビルドキャッシュに保存されることはありません。
 
 <Callout type="warning">
-  ビルド引数を使用して認証情報、認証トークン、その他のシークレットを渡している場合は、[シークレットマウント](/reference/cli/docker/buildx/build.md#secret) を使用するようにビルドをリファクタリングする必要があります。ビルド引数はキャッシュに保存され、その値は証明で公開されます。シークレットマウントはビルド外に漏れず、証明には含まれません。
+  ビルド引数を使用して認証情報、認証トークン、その他のシークレットを渡している場合は、[シークレットマウント](https://docs.docker.com/reference/cli/docker/buildx/build/#secret) を使用するようにビルドをリファクタリングする必要があります。ビルド引数はキャッシュに保存され、その値は証明で公開されます。シークレットマウントはビルド外に漏れず、証明には含まれません。
 </Callout>
 
 詳細については、以下を参照してください：
