--- a/pages/docker-workshop-ja/04_sharing_app.mdx
+++ b/pages/docker-workshop-ja/04_sharing_app.mdx
@@ -71,7 +71,7 @@ import { Callout } from 'nextra/components'
   $ docker build --platform linux/amd64 -t YOUR-USER-NAME/getting-started .
   ```
   
-  Docker buildxもマルチプラットフォームのイメージビルドをサポートしています。詳細は、[マルチプラットフォームイメージ](/build/building/multi-platform.md) を参照してください。
+  Docker buildxもマルチプラットフォームのイメージビルドをサポートしています。詳細は、[マルチプラットフォームイメージ](https://docs.docker.com/build/building/multi-platform/) を参照してください。
 </Callout>
 
 1. ブラウザで [Play with Docker](https://labs.play-with-docker.com/) を開きます。
