--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -66,7 +66,7 @@ Have a good read!
 
 1. Docker Desktop を開きます(インストールしていない場合には [こちら](https://www.docker.com/ja-jp/products/docker-desktop/) からダウンロードします)
 2. ターミナルで次のコマンドを実行します `docker run -dp 80:80 tadashi0713/docs-tadashi0713-dev`
-3. http://localhost をブラウザで開きます
+3. `http://localhost` をブラウザで開きます
 
 ## Run on Docker
 
@@ -74,4 +74,4 @@ This document site is published as a Docker image on [Docker Hub](https://hub.do
 
 1. Open Docker Desktop. (Download [here](https://www.docker.com/products/docker-desktop/) if you don’t have it).
 2. Type the following command in your terminal: `docker run -dp 80:80 tadashi0713/docs-tadashi0713-dev`
-3. Open your browser to http://localhost
+3. Open your browser to `http://localhost`
