--- a/pages/testcontainers-cloud-ja.mdx
+++ b/pages/testcontainers-cloud-ja.mdx
@@ -893,3 +893,76 @@ spec:
 ```
 
 これは柔軟なアプローチであり、`mvn` コマンドを対応するビルドツールのコマンドに置き換えることで、他の言語で記述されたテストを Tekton で Testcontainers Cloud を使用して実行することができます。
+
+## 請求
+
+### 使用量の測定と請求
+
+#### 概要
+
+Testcontainers Cloud の使用量は、Testcontainers Cloud エージェントによってトリガーされます。使用をトリガーするには、エージェントが顧客アカウント内の認可されたユーザーの資格情報を使用して認証されている必要があります。認可されたユーザーは以下のいずれかです：
+
+- メンバー（通常は個人ユーザー）
+- サービスアカウント（通常は自動化されたシステムで使用）
+
+使用量の計測方法は、メンバーとサービスアカウントで異なります：
+
+- サービスアカウントの場合:「Testcontainers Cloud for CI」を参照してください。
+- メンバーの場合:「Testcontainers Cloud for Desktop」を参照してください。
+
+#### Testcontainers Cloud for CI
+
+計測単位: `Worker Minute`
+
+Continuous Integration (CI)環境でエージェントがデプロイされると、サービスアカウントの資格情報で認証されます。CIがワークフロー（ビルドやパイプラインとも呼ばれる）を実行するとき、エージェントは Testcontainers Cloud サービスを提供するために1つ以上のワーカーを割り当てます。
+
+各ワーカーの使用量は、そのワーカーが割り当てられている間に計測されます。割り当ては、エージェントによるサービスアカウントのアクティビティでオンデマンドでワーカーがリクエストされた時点で開始され、非アクティブな状態が一定時間続いた後にワーカーが終了した時点で終了します。
+
+顧客は、`max-concurrency` フラグを設定することで、エージェントが Testcontainers Cloud サービスから1つまたは複数のワーカーを取得するかどうかを制御できます。このフラグを1以上に設定すると、[Turboモード](#turbo-モードでテストを並列化)を利用して複数のワーカーでテストを並列実行することが可能になります。
+
+##### サンプル 1
+
+Testcontainers Cloud エージェントが CI 環境にデプロイされており、月曜から金曜まで 1 日 2 回実行されます。各実行には、1 つの Testcontainers Cloud ワーカーが 17 分間必要です。
+
+- 各ビルドの使用量: 平均で 17 分。
+- 4 週間の合計使用量: CI は 4 週間で 40 回トリガーされ、合計で 680 Worker Minutes が使用されます。
+
+##### サンプル 2
+
+Testcontainers Cloud エージェントが CI 環境にデプロイされており、月曜から日曜まで 1 日 10 回実行されます。各実行では 4 つの Testcontainers Cloud ワーカーが並列で動作します。
+
+- 3 つのワーカーは 4 分間稼働します。
+- 1 つのワーカーは 8 分間稼働します。
+- 各ビルドの使用量: 合計で 20 分。
+- 30 日間の合計使用量: CI は 30 日間で 300 回トリガーされ、合計で 6,000 Worker Minutes が使用されます。
+
+#### Testcontainers Cloud for Desktop
+
+計測単位: `Seats`
+
+Organization のメンバーが Testcontainers Cloud エージェントを使用する場合、月間に生成された Worker Minutes の数に関係なく、1 人のメンバーにつき 1 つの Seat として計測されます（Fair Useポリシーの範囲内）。これは、[Turboモード](#turbo-モードでテストを並列化)を使用して複数のワーカーでテストを並列実行する場合も含まれます。
+
+##### サンプル 3
+
+Organization には2人のメンバーがいます: 
+
+1. Alice: Organization の管理者（Admin）。製品を積極的に使用していないため、Alice は Seat を生成しません。
+2. Barbara: 開発者で、[Turboモード](#turbo-モードでテストを並列化)を有効にして平日に頻繁に製品を使用しています。Barbara は月間 2,500 Worker Minutes を使用しますが、1 つの Seat としてカウントされます。
+
+メンバー 2 人のうち、1 人（Barbara）の使用が計測され、1 か月あたり1 Seat としてカウントされます。
+
+#### よくある質問 (FAQ)
+
+##### 請求サイクルはいつ開始されますか？
+
+請求サイクルは、登録日を問わず毎月1日（UTC）に開始されます。
+
+初月の利用について、Testcontainers Cloud for CI はアップグレード日以降に使用された実際の Worker Minutes に基づいて請求され、Testcontainers Cloud for Desktop は Organization のアップグレード日に基づいて日割り計算されます。
+
+翌月以降の利用については、Testcontainers Cloud for CI は実際の Worker Minutes 使用量に基づいて請求され、Testcontainers Cloud for Desktop は月初前に Organization に参加したメンバーのみが請求対象となります。つまり、新しいメンバーが参加した月に発生した使用量については、翌月の開始まで Seat 料金が免除されます。
+
+##### Fair Use ポリシーとは？
+
+SeatはTestcontainers Cloud for Desktopの「無制限」使用を提供しますが、不正利用（例: 暗号通貨のマイニング）を防ぐため、いくつかの現実的な制限が設けられています。Fair Use ポリシーの下では、1つの Seat に月間 3,000 Worker Minutesのクォータが割り当てられます。このクォータは、実際のところ大多数のユーザーが通常の使用で到達しない上限値として設定されています。
+
+さらに、すべての Seat のクォータは合算されるため、Organization 内に数名の「パワーユーザー」がいても、通常はチーム全体のクォータを使い切ることはありません。
