testcontainers-guides-ja

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,6 +7,7 @@ import { Cards } from 'nextra/components'
 import { FaDocker, FaCompass } from "react-icons/fa";
 import { AiOutlineCloudServer } from "react-icons/ai";
 import { TbHexagon3D } from "react-icons/tb";
+import { FiHexagon } from "react-icons/fi";
 
 # Welcome
 
@@ -48,6 +49,17 @@ Have a good read!
 />
 
 [Docker Build Cloud ドキュメント](https://docs.docker.com/build-cloud/) を日本語訳したものです。
+
+<br />
+
+<Cards.Card
+  icon={<FiHexagon />}
+  title="Testcontainers ガイド"
+  href="/testcontainers-guides-ja"
+  arrow
+/>
+
+[Testcoontainers ガイド](https://testcontainers.com/guides/) を日本語訳したものです。
 
 <br />
 
