--- a/pages/testcontainers-guides-ja.mdx
+++ b/pages/testcontainers-guides-ja.mdx
@@ -53,9 +53,9 @@ import { SiSpring } from "react-icons/si";
 
 <Cards.Card
   icon={<FaNodeJs />}
-  title="Java Spring Boot プロジェクトで Testcontainers を使い始める"
-  href="/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers"
+  title="Node.js で Testcontainers を使い始める"
+  href="/testcontainers-guides-ja/getting-started-with-testcontainers-for-nodejs"
   arrow
 />
 
-このガイドでは、Testcontainers を使用して Spring Boot および Spring Data JPA を基盤とした REST API をテストする方法を説明します。
+このガイドでは、PostgreSQL を使用したテストを例に、Node.js で Testcontainers を使い始める方法を説明します。
